--- a/index.html
+++ b/index.html
@@ -8,59 +8,50 @@
     </head>
 
     <body>
-        <header class="logo">
-            <img id="logo-img" src="Images/logo.png" alt="Logo du site">
-            <span class="bandeau"></span>
-        </header>   
+        <header class="header">
+            <span class="bandeau">
+                <img id="logo-img" src="Images/logo.png" alt="Logo du site">
+            </span>
         
-        <label class="hamburger-menu">
-            <input type="checkbox" />
-        </label>
+            <label class="hamburger-menu">
+                <input type="checkbox" />
+            </label>
 
-        <aside class="sidebar">
-            <nav>
-                <li><a href="index.html">Accueil</a></li><br>
-                <li><a href="index.html">Rbnb</a></li><br>
-                <li><a href="index.html">Trajet</a></li><br>
-                <li><a href="index.html">Supporters</a></li><br>
-            </nav>
-        </aside>
+            <aside class="sidebar">
+                <nav>
+                    <li><a href="index.html">Accueil</a></li><br>
+                    <li><a href="rbnb.html">Rbnb</a></li><br>
+                    <li><a href="trajet.html">Trajet</a></li><br>
+                    <li><a href="supporter.html">Supporters</a></li><br>
+                </nav>
+            </aside>
 
-        <section class="Bienvenue">
-            <div class="content">
-                <img src="Images/Vidéo sans titre ‐ Réalisée avec Clipchamp.gif " alt="GIF coucou">
-                <h2 id="texte-bienvenue">
-                    <span class = "Début">BIENVENUE <br>SUR LA PAGE DU</span><br>
-                    <span class = "Fin">SALMAD FAN <br>CLUB 2025 !</span>
-                </h2>
-            </div>
-        </section>
-
-        <section class="Timer-tri">
-            <div class="dessin-tri">
-                <img src="Images/Fond dessin.jpeg" alt="Dessin triathlon">
-            </div>
-            <div class="Timer">
-                <!-- <h1>Triathlon des gorges de l'Ardèche</h1> -->
-                <div class="timebox">
-                    <div class="time">
-                        <h2 id="days">00</h2>
-                        <p>Jours</p>
+            <section class="Bienvenue">
+                <div class="Timer">
+                    <div class="timebox">
+                        <div class="time">
+                            <h2 id="days">00</h2>
+                            <p>Jours</p>
+                        </div>
+                        <div class="time">
+                            <h2 id="hours">00</h2>
+                            <p>Heures</p>
+                        </div>
+                        <div class="time">
+                            <h2 id="minutes">00</h2>
+                            <p>Minutes</p>
+                        </div>
+                        <div class="time">
+                            <h2 id="seconds">00</h2>
+                            <p>Secondes</p>
+                        </div>
                     </div>
-                    <div class="time">
-                        <h2 id="hours">00</h2>
-                        <p>Heures</p>
-                    </div>
-                    <div class="time">
-                        <h2 id="minutes">00</h2>
-                        <p>Minutes</p>
-                    </div>
-                    <div class="time">
-                        <h2 id="seconds">00</h2>
-                        <p>Secondes</p>
-                    </div>  
-            </div>
-        </section>
+                </div>
+                <span class="texte">
+                    <h2 id="Début">Bienvenue sur le site du</h2>
+                    <h2 id="Fin">SM FAN CLUB 2025</h2>
+            </section>
+        </header>
         <script src="menu.js" defer></script>
         <script src="script.js" defer></script>
 
