--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <body>
         <header class="header">
             <span class="bandeau">
-                <img id="logo-img" src="Images/logo.png" alt="Logo du site">
+                <a href="index.html">
+                    <img id="logo-img" src="Images/logo.png" alt="Logo du site">
+                </a>
             </span>
         
             <label class="hamburger-menu">
@@ -19,12 +21,14 @@
 
             <aside class="sidebar">
                 <nav>
-                    <li><a href="index.html">Accueil</a></li><br>
-                    <li><a href="rbnb.html">Rbnb</a></li><br>
-                    <li><a href="trajet.html">Trajet</a></li><br>
-                    <li><a href="supporter.html">Supporters</a></li><br>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="circuit.html">Circuit Triathlon</a></li>
+                    <li><a href="rbnb.html">Airbnb</a></li>
+                    <li><a href="trajet.html">Trajet voiture</a></li>
+                    <li><a href="supporter.html">Supporters</a></li>
                 </nav>
             </aside>
+            <a class="cache-noir"></a>
 
             <section class="Bienvenue">
                 <div class="Timer">
