--- a/trajet.html
+++ b/trajet.html
@@ -10,7 +10,9 @@
     <body>
         <header class="header">
             <span class="bandeau">
-                <img id="logo-img" src="Images/logo.png" alt="Logo du site">
+                <a href="index.html">
+                    <img id="logo-img" src="Images/logo.png" alt="Logo du site">
+                </a>
             </span>
         
             <label class="hamburger-menu">
@@ -19,27 +21,39 @@
 
             <aside class="sidebar">
                 <nav>
-                    <li><a href="index.html">Accueil</a></li><br>
-                    <li><a href="rbnb.html">Rbnb</a></li><br>
-                    <li><a href="trajet.html">Trajet</a></li><br>
-                    <li><a href="supporter.html">Supporters</a></li><br>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="circuit.html">Circuit Triathlon</a></li>
+                    <li><a href="rbnb.html">Airbnb</a></li>
+                    <li><a href="trajet.html">Trajet voiture</a></li>
+                    <li><a href="supporter.html">Supporters</a></li>
                 </nav>
             </aside>
+            <a class="cache-noir"></a>
 
             <section class="Trajet">
-                <h2 class="trajet-title">
+                <!-- <h2 class="trajet-title">
                     Partir à l'heure <br> c'est partir sans peur !
-                </h2>
+                </h2> -->
                 <div class="trajet-details">
-                    <p class="trajet-depart">Départ : 13h00 <br> Bras de fer, Evry</p>
-                    <p class="trajet-arrivée">Arrivée : 19h41 <br> Saint-Martin-d'Ardèche</p>
-                    <p class="trajet-durée">Durée : 5h41</p>
+                    <h3 class="trajet-title">Trajet pour le triathlon de l'Ardèche</h3>
+                    <p class="trajet-depart">Départ : Bras de fer, Evry (13h)</p>
+                    <p class="trajet-arrivée">Arrivée : Saint-Martin-d'Ardèche (20h)</p>
                     <p class="trajet-distance">Distance : 618km</p>
+                    <p class="trajet-durée1">Durée estimée : 7h</p>
+                    <p class="trajet-durée2">Durée sans pause: 5h41</p>
+                    <p class="trajet-durée2">Durée avec pause: 6h30</p>
+                    <p class="trajet-durée2">Durée si Mad conduit: 10h28</p>
                     <p class="trajet-prix">Prix : 32€/pers</p>
-                    <p class="trajet-emissionsCO2">Emissions CO2 : 25kg/pers</p>
                     <a class="trajet-button" href="https://fr.mappy.com/itineraire#/voiture/Le%20Bras%20De%20Fer%20-%2091000%20%C3%89vry-Courcouronnes/Quai%20des%20Pescadous%2C%2007700%20Saint-Martin-d'Ard%C3%A8che/car/8?departureDateTime=2025-07-02T13%3A00">En savoir plus</a>
                 </div>
+                <div class="musique">    
+                    <h3>Musique</h3>
+                    <a class="musique-description">La musique sera un élément essentiel du trajet. Une organisation doit être mise en place afin d'assurer à tout le monde un trajet agréable.</a>
+                    <p class="musique-description">Responsable musique : Mael</p>
+                    <a class="trajet-" href="https://dzr.page.link/paxNrSoPucKrUY7T7">Playlist collaborative.</a>
+                </div>
             </section>
+
         <!-- </header> -->
         <script src="menu.js" defer></script>
 
