--- a/circuit.html
+++ b/circuit.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="circuit-courant">
                             <a class="légende">Température</a>
-                            <a class="valeur">Parfait</a>
+                            <a class="valeur">Parfaite</a>
                         </div>
                             <div class="circuit-horaire">
                             <a class="légende">Horaire</a>
@@ -99,7 +99,7 @@
                         </div>
                         <div class="circuit-courant">
                             <a class="légende">Température</a>
-                            <a class="valeur">Parfait</a>
+                            <a class="valeur">Parfaite</a>
                         </div>
                             <div class="circuit-horaire">
                             <a class="légende">Horaire</a>
