--- a/rbnb.html
+++ b/rbnb.html
@@ -35,8 +35,22 @@
                     Annonces Airbnb
                 </h2>
                 <div class="best-plants">
+                    <a href="https://www.airbnb.fr/rooms/6636957?viralityEntryPoint=1&s=76&source_impression_id=p3_1748606480_P3GDEjN2zHz_ZnNn&check_in=2025-07-02&guests=5&adults=5&check_out=2025-07-06" class="plant-box plant1">
+                        <div class="plant-image">
+                            <img src="Images/Annonce6.png" alt="Annonce6">
+                            <div class="nouveau">New</div>
+                        </div>
+                        <div class="plant-details">
+                            <p class="plant-name">Villa provençale</p>
+                            <p class="plant-price">42€/nuit/pers</p>
+                            <p class="plant-chambres">2 chambres double, 1 chambre avec 2 lits simples.</p>
+                            <p class="plant-description">Très belle villa provençale 115m² de plain-pied, sur terrain privé arboré de 1500 m²avec vue sur colline à 180°, calme et repos assuré, sans vis-à-vis. Piscine privée, à l'abris de tout regard.</p>
+                        </div>
+                    </a>
                     <a href="https://www.airbnb.com/l/0Koxv3Qy" class="plant-box plant1">
-                        <img src="Images/Annonce1.png" alt="Annonce1">
+                        <div class="plant-image">
+                            <img src="Images/Annonce1.png" alt="Annonce1">
+                        </div>
                         <div class="plant-details">
                             <p class="plant-name">Appartement Lauriers</p>
                             <p class="plant-price">29€/nuit/pers</p>
@@ -46,7 +60,9 @@ Et en cas de temps moins clément, pas de panique, la piscine est chauffée!</p>
                         </div>
                     </a>
                     <a href="https://www.airbnb.com/l/LEYNqN15" class="plant-box plant2">
-                        <img src="Images/Annonce2.png" alt="Annonce2">
+                        <div class="plant-image">
+                            <img src="Images/Annonce2.png" alt="Annonce1">
+                        </div>
                         <div class="plant-details">
                             <p class="plant-name">Maison de Hameau</p>
                             <p class="plant-price">25€/nuit/pers</p>
@@ -55,7 +71,9 @@ Et en cas de temps moins clément, pas de panique, la piscine est chauffée!</p>
                         </div>
                     </a>
                     <a href="https://www.airbnb.com/l/nThvEYGs" class="plant-box plant3">
-                        <img src="Images/Annonce3.png" alt="Annonce3">
+                        <div class="plant-image">
+                            <img src="Images/Annonce3.png" alt="Annonce3">
+                        </div>
                         <div class="plant-details">
                             <p class="plant-name">Gîte Le Ventoux</p>
                             <p class="plant-price">37€/nuit/pers</p>
@@ -64,7 +82,9 @@ Et en cas de temps moins clément, pas de panique, la piscine est chauffée!</p>
                         </div>
                     </a>
                     <a href="https://www.airbnb.com/l/9EKDII4m" class="plant-box plant4">
-                        <img src="Images/Annonce4.png" alt="Annonce4">
+                        <div class="plant-image">
+                            <img src="Images/Annonce4.png" alt="Annonce4">
+                        </div>
                         <div class="plant-details">
                             <p class="plant-name">LA GRANGE</p>
                             <p class="plant-price">44€/nuit/pers</p>
@@ -73,7 +93,9 @@ Et en cas de temps moins clément, pas de panique, la piscine est chauffée!</p>
                         </div>
                     </a>
                     <a href="https://www.airbnb.com/l/KEDaQBmL" class="plant-box plant5">
-                        <img src="Images/Annonce5.png" alt="Annonce5">
+                        <div class="plant-image">
+                            <img src="Images/Annonce5.png" alt="Annonce5">
+                        </div>
                         <div class="plant-details">
                             <p class="plant-name">Maison de village</p>
                             <p class="plant-price">32€/nuit/pers</p>
