--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <h2 id="Début">Bienvenue sur le site du</h2>
                     <h2 id="Fin">SM FAN CLUB 2025</h2>
             </section>
-        </header>
+        <!-- </header> -->
         <script src="menu.js" defer></script>
         <script src="script.js" defer></script>
 
